--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: "3.9"
 
 services:
-  backend:
-    build:
-      context: .
-      dockerfile: backend.Dockerfile
+  # backend:
+  #   build:
+  #     context: .
+  #     dockerfile: backend.Dockerfile
 
   my-nats:
     image: nats:latest
