--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -12,3 +12,4 @@ services:
       - "4222:4222" # Listening for client connections
       - "6222:6222" # Listening for route connections
       - "8222:8222" # http monitor
+    command: -js #enable jetstream
