--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,12 @@
 version: "3.9"
 
 services:
-  client1:
+  jetstreamcli:
     build:
-      context: ./client1
-      dockerfile: ../client1.Dockerfile
-    restart: always
-
-  client2:
-    build:
-      context: ./client2
-      dockerfile: ../client2.Dockerfile
-    restart: always
-
-  client3:
-    build:
-      context: ./client3
-      dockerfile: ../client3.Dockerfile
+      context: ./jetstreamclient
+      dockerfile: ../jetstreamclient.Dockerfile
+    ports:
+      - "9090:9090"
     restart: always
 
   my-nats:
@@ -25,7 +15,7 @@ services:
         - "4222:4222" # Listening for client connections
         - "6222:6222" # Listening for route connections
         - "8222:8222" # http monitor
-        - "8080:8080" # Additional port for NATS configuration
+        - "8080:8080"
       volumes:
         - ./tmp:/container # Mounting the host directory to container
-      command: -c /container/nats.conf -js # Specify the configuration file and enable jetstream
+      command: -c /container/nats.conf -js # Specify the configuration file and enable jetstream //
